@@ -2028,6 +2028,7 @@ sub handle_texinfo
     }
 
     # Handle location of texinfo.tex.
+    local ($need_texi_file) = 0;
     if ($cygnus_mode)
     {
 	&define_variable ('TEXINFO_TEX',
@@ -2040,6 +2041,7 @@ sub handle_texinfo
     elsif (! &variable_defined ('TEXINFO_TEX'))
     {
 	&define_variable ('TEXINFO_TEX', '$(srcdir)/texinfo.tex');
+	$need_texi_file = 1;
     }
     local ($xxform) = &dirname (&variable_value ('TEXINFO_TEX'));
     $xxform =~ s/(\W)/\\$1/g;
@@ -2097,8 +2099,7 @@ sub handle_texinfo
     # when in Cygnus mode; instead we defined TEXINFO_TEX explicitly
     # up above.
     &require_file_with_line ('info_TEXINFOS', $FOREIGN, 'texinfo.tex')
-	unless (defined $options{'no-texinfo.tex'}
-		|| &variable_defined ('TEXINFO_TEX'));
+	if $need_texi_file || ! defined $options{'no-texinfo.tex'};
 }
 
 # Handle any man pages.
