@@ -1,3 +1,8 @@
+Wed Aug 27 12:56:50 1997  Tom Tromey  <tromey@cygnus.com>
+
+	* automake.in (handle_texinfo): Only require texinfo.tex in
+	appropriate situations.  Report from Paul D. Smith.
+
 Mon Aug 25 15:45:52 1997  Tom Tromey  <tromey@cygnus.com>
 
 	* automake.in (scan_dependency_file): Fix so that
